Atualizar texto do botão de busca de arquivo no componente carrinho

--- a/Semana_10/frontend-P010/src/app/carrinho/carrinho.component.html
+++ b/Semana_10/frontend-P010/src/app/carrinho/carrinho.component.html
@@ -1,5 +1,5 @@
 <div (click)="buscarDados('veiculos')">
-    <span>veiculos.json</span><br>
+    <span>Procurar arquivo: VEICULOS.JSON</span><br>
     <input type="submit" value="Procurar">
 </div>
 
