Atualizar links do menu e criptografar senha de usuário

--- a/Semana_15/suinoCultura/src/app/app.component.html
+++ b/Semana_15/suinoCultura/src/app/app.component.html
@@ -16,8 +16,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gerenciar Suinos</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/cadastro">Cadastrar</a></li>
-            <li><a class="dropdown-item" routerLink="/lista">Listar</a></li>
+            <li><a class="dropdown-item" routerLink="/cadastro">Cadastrar Suino</a></li>
+            <li><a class="dropdown-item" routerLink="/lista">Listar Suinos</a></li>
           </ul>
         </li>
       </ul>
