--- a/Semana_15/suinoCultura/src/app/app.component.css
+++ b/Semana_15/suinoCultura/src/app/app.component.css
@@ -3,3 +3,15 @@
   justify-content: center;
   padding-top: 40px;
 }
+
+#nav-bar{
+  background-color: #FAD5B8;
+}
+
+#logo-nav{
+  color: #95423C;
+}
+
+.itens-nav{
+  color: #88373D;
+}
