--- a/Semana_15/suinoCultura/src/app/app.component.html
+++ b/Semana_15/suinoCultura/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" id="nav-bar">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home" style="color: brown;">SuinoCultura</a>
+    <a class="navbar-brand" id="logo-nav" routerLink="/home">SuinoCultura</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,16 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav col">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/home">Home</a>
+          <a class="nav-link itens-nav" aria-current="page" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/register">Cadastrar-se</a>
+          <a class="nav-link itens-nav" aria-current="page" routerLink="/register">Cadastrar-se</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gerenciar Suinos</a>
+          <a class="nav-link dropdown-toggle itens-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gerenciar Suinos</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/cadastro">Cadastrar Suino</a></li>
-            <li><a class="dropdown-item" routerLink="/lista">Listar Suinos</a></li>
+            <li><a class="dropdown-item itens-nav" routerLink="/cadastro">Cadastrar Suino</a></li>
+            <li><a class="dropdown-item itens-nav" routerLink="/lista">Listar Suinos</a></li>
           </ul>
         </li>
       </ul>
