Criação do component sessão e armazenamento dos dados

--- a/Semana_15/suinoCultura/src/app/app.component.html
+++ b/Semana_15/suinoCultura/src/app/app.component.html
@@ -18,6 +18,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item itens-nav" routerLink="/cadastro">Cadastrar Suino</a></li>
             <li><a class="dropdown-item itens-nav" routerLink="/lista">Listar Suinos</a></li>
+            <li><a class="dropdown-item itens-nav" routerLink="/manejosanitario">Manejo Sanitário</a></li>
           </ul>
         </li>
       </ul>
