--- a/Semana_15/suinoCultura/src/app/components/lista/lista.component.html
+++ b/Semana_15/suinoCultura/src/app/components/lista/lista.component.html
@@ -129,7 +129,7 @@
         </div>
         <button class="btn btn-dark" (click)="selecionarSuino(suino)"
           (click)="excluir(suinoSelecionado.key)">Excluir</button>
-        <button class="btn btn-dark">Peso</button>
+        <!-- <button class="btn btn-dark">Peso</button> -->
       </td>
     </tr>
   </tbody>
